Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 
 .App {
   background-color: black;
-  height: 100vw;
   color: white;
   overflow-x: inherit;
   width: 100vw;
