--- a/src/Movie.css
+++ b/src/Movie.css
@@ -1,27 +1,29 @@
 .single-movie{
   display:flex;
-  justify-content: center;
+  height: 100%;
+  justify-content: space-around;
   align-items: flex-start;
   background-color: black;
   background-size: cover;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .description-div, .poster-div{
+  height: 90vw;
   padding: 40px;
-  width: 50%;
-  height: 100vw;
-  align-items: center;
+  align-items: flex-start;
   background: black;
-  opacity: 0.8;
+  opacity: 0.75;
 }
 
 .poster-div{
-  height: 100vw;
-  padding-left: 200px;
+  align-self: flex-start;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 .description-div {
-  padding-top: 100px;
   padding-right: 200px;
+  overflow-y: auto;
 }
